fixed image overlap & styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,9 @@ body {
     grid-template-columns: 75% 25%;
     grid-auto-rows: auto;
     grid-gap: 15px;
-    background-color: #CC5A33;
     font-size: 24px;
     margin: 1% 2% 1% 1%;
+    background-image: url(../images/pipes.png);
 }
 
 #nonstaredGifs {
@@ -45,7 +45,7 @@ input, #searchBtn {
     grid-column: 1 / 3;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 220px;
+    grid-auto-rows: auto;
     width: 100%;
     grid-column-gap: 15px;
 }
@@ -54,3 +54,6 @@ input, #searchBtn {
     grid-column: 2;
 }
 
+p {
+    height: 36px;
+}
